feat: replaced the methods for deleting and adding a student to a group with a universal one, added return values ​​for students
