# internal/groups/sync_students/dto.go
@@ -1,9 +1,9 @@
-package addstudents
+package syncstudents
 
 import "github.com/google/uuid"
 
 type Request struct {
-	StudentIDs []uuid.UUID `json:"student_ids" validate:"required,min=1"`
+	StudentIDs []uuid.UUID `json:"student_ids"`
 }
 
 type Response struct {
